[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/game_board.gd" id="2"]
[ext_resource type="Script" path="res://scripts/effects.gd" id="3"]
[ext_resource type="Script" path="res://scripts/board_renderer.gd" id="4"]
[ext_resource type="PackedScene" path="res://scenes/ui.tscn" id="5"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)

[node name="BoardRenderer" type="Node2D" parent="."]
script = ExtResource("4")

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("2")

[node name="BallsContainer" type="Node2D" parent="GameBoard"]

[node name="Walls" type="Node2D" parent="GameBoard"]

[node name="EffectsManager" type="Node2D" parent="."]
script = ExtResource("3")

[node name="UIManager" parent="." instance=ExtResource("5")]
